Issue 508,734 fixed. Test case added.
git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@10677 a8845c50-7012-0410-95d3-8e1449b9b1e4